// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputHaloPresenter renders by default 1`] = `
.emotion-1 {
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-bottom-style: solid;
}

.emotion-0 {
  position: absolute;
  top: 100%;
  left: 0;
  right: 0;
  height: 0;
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.3s,0.3s;
  transition-duration: 0.3s,0.3s;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  />
</div>
`;

exports[`InputHaloPresenter renders when disabled 1`] = `
.emotion-1 {
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-bottom-style: solid;
}

.emotion-0 {
  position: absolute;
  top: 100%;
  left: 0;
  right: 0;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  />
</div>
`;

exports[`InputHaloPresenter renders with focus 1`] = `
.emotion-1 {
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-bottom-style: solid;
}

.emotion-0 {
  position: absolute;
  top: 100%;
  left: 0;
  right: 0;
  -webkit-transition-duration: 0.1s,0.1s;
  transition-duration: 0.1s,0.1s;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  />
</div>
`;

exports[`InputHaloPresenter renders with hover 1`] = `
.emotion-1 {
  position: relative;
  border-style: solid;
  border-color: transparent;
  border-bottom-style: solid;
}

.emotion-0 {
  position: absolute;
  top: 100%;
  left: 0;
  right: 0;
  -webkit-transition-property: height,color;
  transition-property: height,color;
  -webkit-transition-duration: 0.1s,0.1s;
  transition-duration: 0.1s,0.1s;
}

<div
  className="emotion-1"
>
  <div
    className="emotion-0"
  />
</div>
`;
